Updated dockerfile.