@@ -1,25 +1,18 @@
-# (1)
-FROM alpine:latest AS build 
-ENV JAVA_HOME /opt/jdk/jdk-21.0.1
-ENV PATH $JAVA_HOME/bin:$PATH
+FROM govpf/openjdk:21-jdk-alpine
 
-# (2)
-ADD https://download.bell-sw.com/java/21.0.1+12/bellsoft-jdk21.0.1+12-linux-x64-musl.tar.gz /opt/jdk/
-RUN tar -xzvf /opt/jdk/bellsoft-jdk21.0.1+12-linux-x64-musl.tar.gz -C /opt/jdk/
+USER root
 
-# (3)
-RUN ["jlink", "--compress=2", \
-     "--module-path", "/opt/jdk/jdk-21.0.1/jmods/", \
-# (4)
-     "--add-modules", "java.base,java.logging,java.naming,java.desktop,jdk.unsupported", \
-     "--no-header-files", "--no-man-pages", \
-     "--output", "/springboot-runtime"]
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
 
-# (5)
-FROM alpine:latest
-# (6)
-COPY --from=build  /springboot-runtime /opt/jdk 
-ENV PATH=$PATH:/opt/jdk/bin
-EXPOSE 8080
-COPY target/emotion-gateway.jar /opt/app/
-CMD ["java", "-showversion", "-jar", "/opt/app/emotion-gateway.jar"]
+VOLUME /tmp
+
+ARG DEPENDENCY=build/docker/dependency
+ARG APPCLASS=physic/ai/demo/DemoApplication
+ENV APPCLASS_ENV=$APPCLASS
+
+COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY ${DEPENDENCY}/META-INF /app/META-INF
+COPY ${DEPENDENCY}/BOOT-INF/classes /app
+
+ENTRYPOINT java -cp app:app/lib/* $APPCLASS_ENV
